--- a/app/shared/profile-view/profile-view.styles.css
+++ b/app/shared/profile-view/profile-view.styles.css
@@ -16,3 +16,7 @@
 .profile {
   color: white;
 }
+.text-white {
+  color: #d6d6d6;
+  font-weight: normal;
+}
